HelloUltraviolet/Fixtures/RejectedSource/Procedures/MainMissing/Expected.uv
//! Expected diagnostic metadata for the MainMissing rejected-source specimen.

expectedDiagnostic("E-MOD-2434", "rule.15.Main-Missing")
